[CHG]解决在添加和编辑服务器时会意外退出编辑状态的问题

--- a/resource/template/dashboard-default/server.html
+++ b/resource/template/dashboard-default/server.html
@@ -99,7 +99,7 @@
                     </td>
                     <td>
                         {{if $server.PublicNote}}
-                            <button class="ui icon green mini button" title="{{$server.PublicNote}}" onclick="addOrEditServer({{$server.MarshalForDashboard}})"><i class="sticky note icon"></i></button>
+                            <button class="ui icon green mini button" title="{{$server.PublicNote}}" onclick="addOrEditServer({{$server.MarshalForDashboard}})"><i class="sticky edit icon"></i></button>
                         {{end}}
                     </td>
                     <td>
