[CHG]修改仓库名

--- a/resource/template/theme-server-status/footer.html
+++ b/resource/template/theme-server-status/footer.html
@@ -1,7 +1,7 @@
 {{define "theme-server-status/footer"}}
     </section>
     <footer class="container-fluid">
-        <p>{{ .Conf.Site.Brand }} | ServerStatus | Powered by <a target="_blank" href="https://github.com/railzen/NezhaZero">Nezha Zero</a> {{.Version}}</p>
+        <p>{{ .Conf.Site.Brand }} | ServerStatus | Powered by <a target="_blank" href="https://github.com/railzen/nezha-zero">Nezha Zero</a> {{.Version}}</p>
     </footer>
     <aside class="toolbox">
 
