--- a/resource/template/dashboard-default/file.html
+++ b/resource/template/dashboard-default/file.html
@@ -7,15 +7,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File List</title>
+    <style>
+    @font-face {
+        font-family: 'Lato';
+        src: url('/static/cdn/semantic-ui@2.4.0/dist/fonts/Lato-Regular.woff2') format('woff2');
+        font-weight: 400;
+        font-style: normal;
+    }
+
+    @font-face {
+        font-family: 'Lato';
+        src: url('/static/cdn/semantic-ui@2.4.0/dist/fonts/Lato-Regular.woff2') format('woff2');
+        font-weight: 700;
+        font-style: normal;
+    }
+
+    @font-face {
+        font-family: 'Lato';
+        src: url('/static/cdn/semantic-ui@2.4.0/dist/fonts/Lato-Regular.woff2') format('woff2');
+        font-weight: 400;
+        font-style: italic;
+    }
+
+    @font-face {
+        font-family: 'Lato';
+        src: url('/static/cdn/semantic-ui@2.4.0/dist/fonts/Lato-Regular.woff2') format('woff2');
+        font-weight: 700;
+        font-style: italic;
+    }
+    </style>
+
     <link rel="shortcut icon" type="image/png" href="/static/logo.svg?v20210804" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />  -->
     <link rel="stylesheet" href="/static/cdn/mdui@2/mdui.css" />
     <link href="/static/cdn/fonts/material-icons.css" rel="stylesheet" />
     <script src="/static/cdn/mdui@2/mdui.global.js"></script>
 </head>
 <style>
     body {
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Lato', sans-serif;
     }
 
     .file-list {
